--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,9 @@
+<!-- File: index.html -->
+<!-- Author: Tóth Fedor László -->
+<!-- Copyright: 2023, Tóth Fedor László -->
+<!-- Date: 2023.06.06 -->
+<!-- Web: https://github.com/TothFL/ -->
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
